tests/ui/macros/metavar-expressions/concat-syntax-errors.stderr
error: expected identifier or string literal
  --> $DIR/concat-syntax-errors.rs:5:10
   |
LL |         ${concat()}
   |          ^^^^^^^^^^

error: `concat` must have at least two elements
  --> $DIR/concat-syntax-errors.rs:8:11
   |
LL |         ${concat(aaaa)}
   |           ^^^^^^

error: expected identifier or string literal
  --> $DIR/concat-syntax-errors.rs:11:10
   |
LL |         ${concat(aaaa,)}
   |          ^^^^^^^^^^^^^^^

error: expected comma
  --> $DIR/concat-syntax-errors.rs:16:10
   |
LL |         ${concat(aaaa aaaa)}
   |          ^^^^^^^^^^^^^^^^^^^

error: `concat` must have at least two elements
  --> $DIR/concat-syntax-errors.rs:19:11
   |
LL |         ${concat($ex)}
   |           ^^^^^^

error: expected comma
  --> $DIR/concat-syntax-errors.rs:25:10
   |
LL |         ${concat($ex, aaaa 123)}
   |          ^^^^^^^^^^^^^^^^^^^^^^^

error: expected identifier or string literal
  --> $DIR/concat-syntax-errors.rs:28:10
   |
LL |         ${concat($ex, aaaa,)}
   |          ^^^^^^^^^^^^^^^^^^^^

error: expected identifier or string literal
  --> $DIR/concat-syntax-errors.rs:88:26
   |
LL |         let ${concat(_a, 'b')}: () = ();
   |                          ^^^

error: expected identifier or string literal
  --> $DIR/concat-syntax-errors.rs:91:26
   |
LL |         let ${concat(_a, 1)}: () = ();
   |                          ^

error: expected identifier or string literal
  --> $DIR/concat-syntax-errors.rs:94:30
   |
LL |         let ${concat($ident, 'b')}: () = ();
   |                              ^^^

error: expected identifier or string literal
  --> $DIR/concat-syntax-errors.rs:96:30
   |
LL |         let ${concat($ident, 1)}: () = ();
   |                              ^

error: metavariables of `${concat(..)}` must be of type `ident`, `literal` or `tt`
  --> $DIR/concat-syntax-errors.rs:22:19
   |
LL |         ${concat($ex, aaaa)}
   |                   ^^
   |
   = note: currently only string literals are supported

error: variable `foo` is not recognized in meta-variable expression
  --> $DIR/concat-syntax-errors.rs:35:30
   |
LL |         const ${concat(FOO, $foo)}: i32 = 2;
   |                              ^^^

error: `${concat(..)}` is not generating a valid identifier
  --> $DIR/concat-syntax-errors.rs:42:14
   |
LL |         let ${concat("1", $ident)}: () = ();
   |              ^^^^^^^^^^^^^^^^^^^^^
...
LL |     starting_number!(_abc);
   |     ---------------------- in this macro invocation
   |
   = note: this error originates in the macro `starting_number` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `${concat(..)}` is not generating a valid identifier
  --> $DIR/concat-syntax-errors.rs:55:14
   |
LL |         let ${concat("\u{00BD}", $ident)}: () = ();
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL |     starting_invalid_unicode!(_abc);
   |     ------------------------------- in this macro invocation
   |
   = note: this error originates in the macro `starting_invalid_unicode` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `${concat(..)}` is not generating a valid identifier
  --> $DIR/concat-syntax-errors.rs:74:14
   |
LL |         let ${concat($ident, "\u{00BD}")}: () = ();
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL |     ending_invalid_unicode!(_abc);
   |     ----------------------------- in this macro invocation
   |
   = note: this error originates in the macro `ending_invalid_unicode` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected pattern, found `$`
  --> $DIR/concat-syntax-errors.rs:88:13
   |
LL |         let ${concat(_a, 'b')}: () = ();
   |             ^ expected pattern
...
LL |     unsupported_literals!(_abc);
   |     --------------------------- in this macro invocation
   |
   = note: this error originates in the macro `unsupported_literals` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `${concat(..)}` is not generating a valid identifier
  --> $DIR/concat-syntax-errors.rs:81:14
   |
LL |         let ${concat("", "")}: () = ();
   |              ^^^^^^^^^^^^^^^^
...
LL |     empty!();
   |     -------- in this macro invocation
   |
   = note: this error originates in the macro `empty` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `${concat(..)}` is not generating a valid identifier
  --> $DIR/concat-syntax-errors.rs:103:16
   |
LL |         const ${concat(_foo, $literal)}: () = ();
   |                ^^^^^^^^^^^^^^^^^^^^^^^^
...
LL |     bad_literal_string!("\u{00BD}");
   |     ------------------------------- in this macro invocation
   |
   = note: this error originates in the macro `bad_literal_string` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `${concat(..)}` is not generating a valid identifier
  --> $DIR/concat-syntax-errors.rs:103:16
   |
LL |         const ${concat(_foo, $literal)}: () = ();
   |                ^^^^^^^^^^^^^^^^^^^^^^^^
...
LL |     bad_literal_string!("\x41");
   |     --------------------------- in this macro invocation
   |
   = note: this error originates in the macro `bad_literal_string` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `${concat(..)}` is not generating a valid identifier
  --> $DIR/concat-syntax-errors.rs:103:16
   |
LL |         const ${concat(_foo, $literal)}: () = ();
   |                ^^^^^^^^^^^^^^^^^^^^^^^^
...
LL |     bad_literal_string!("🤷");
   |     ------------------------- in this macro invocation
   |
   = note: this error originates in the macro `bad_literal_string` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `${concat(..)}` is not generating a valid identifier
  --> $DIR/concat-syntax-errors.rs:103:16
   |
LL |         const ${concat(_foo, $literal)}: () = ();
   |                ^^^^^^^^^^^^^^^^^^^^^^^^
...
LL |     bad_literal_string!("d[-_-]b");
   |     ------------------------------ in this macro invocation
   |
   = note: this error originates in the macro `bad_literal_string` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `${concat(..)}` is not generating a valid identifier
  --> $DIR/concat-syntax-errors.rs:103:16
   |
LL |         const ${concat(_foo, $literal)}: () = ();
   |                ^^^^^^^^^^^^^^^^^^^^^^^^
...
LL |     bad_literal_string!("-1");
   |     ------------------------- in this macro invocation
   |
   = note: this error originates in the macro `bad_literal_string` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `${concat(..)}` is not generating a valid identifier
  --> $DIR/concat-syntax-errors.rs:103:16
   |
LL |         const ${concat(_foo, $literal)}: () = ();
   |                ^^^^^^^^^^^^^^^^^^^^^^^^
...
LL |     bad_literal_string!("1.0");
   |     -------------------------- in this macro invocation
   |
   = note: this error originates in the macro `bad_literal_string` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `${concat(..)}` is not generating a valid identifier
  --> $DIR/concat-syntax-errors.rs:103:16
   |
LL |         const ${concat(_foo, $literal)}: () = ();
   |                ^^^^^^^^^^^^^^^^^^^^^^^^
...
LL |     bad_literal_string!("'1'");
   |     -------------------------- in this macro invocation
   |
   = note: this error originates in the macro `bad_literal_string` (in Nightly builds, run with -Z macro-backtrace for more info)

error: metavariables of `${concat(..)}` must be of type `ident`, `literal` or `tt`
  --> $DIR/concat-syntax-errors.rs:116:31
   |
LL |         const ${concat(_foo, $literal)}: () = ();
   |                               ^^^^^^^
   |
   = note: currently only string literals are supported

error: metavariables of `${concat(..)}` must be of type `ident`, `literal` or `tt`
  --> $DIR/concat-syntax-errors.rs:116:31
   |
LL |         const ${concat(_foo, $literal)}: () = ();
   |                               ^^^^^^^
   |
   = note: currently only string literals are supported
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: metavariables of `${concat(..)}` must be of type `ident`, `literal` or `tt`
  --> $DIR/concat-syntax-errors.rs:116:31
   |
LL |         const ${concat(_foo, $literal)}: () = ();
   |                               ^^^^^^^
   |
   = note: currently only string literals are supported
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: metavariables of `${concat(..)}` must be of type `ident`, `literal` or `tt`
  --> $DIR/concat-syntax-errors.rs:116:31
   |
LL |         const ${concat(_foo, $literal)}: () = ();
   |                               ^^^^^^^
   |
   = note: currently only string literals are supported
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: metavariables of `${concat(..)}` must be of type `ident`, `literal` or `tt`
  --> $DIR/concat-syntax-errors.rs:116:31
   |
LL |         const ${concat(_foo, $literal)}: () = ();
   |                               ^^^^^^^
   |
   = note: currently only string literals are supported
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: metavariables of `${concat(..)}` must be of type `ident`, `literal` or `tt`
  --> $DIR/concat-syntax-errors.rs:127:31
   |
LL |         const ${concat(_foo, $tt)}: () = ();
   |                               ^^
   |
   = note: currently only string literals are supported

error: metavariables of `${concat(..)}` must be of type `ident`, `literal` or `tt`
  --> $DIR/concat-syntax-errors.rs:127:31
   |
LL |         const ${concat(_foo, $tt)}: () = ();
   |                               ^^
   |
   = note: currently only string literals are supported
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: metavariables of `${concat(..)}` must be of type `ident`, `literal` or `tt`
  --> $DIR/concat-syntax-errors.rs:127:31
   |
LL |         const ${concat(_foo, $tt)}: () = ();
   |                               ^^
   |
   = note: currently only string literals are supported
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 33 previous errors

